c++: *this capture in const member fn [PR95193].

Here, the capture proxy for *this is const, but its DECL_VALUE_EXPR is not.
Don't ICE on this; it's a reasonable difference, since in C++ an rvalue of
scalar type does not have cv-qualifiers.

gcc/cp/ChangeLog:

	PR c++/95193
	* pt.c (tsubst_decl): Relax assert.

gcc/testsuite/ChangeLog:

	PR c++/95193
	* g++.dg/cpp1z/lambda-this7.C: New test.